bases/common/netpol-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-cassandra
spec:
  podSelector:
    matchLabels:
      app: apigee-cassandra
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          namespace: kube-system          
    ports:
    - protocol: UDP
      port: 53
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-runtime
spec:
  podSelector:
    matchLabels:
      app: apigee-runtime
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          namespace: kube-system    
    - ipBlock:
        cidr: 8.8.8.8/32
    ports:
    - protocol: UDP
      port: 53
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-mart
spec:
  podSelector:
    matchLabels:
      app: apigee-mart
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          namespace: kube-system    
    - ipBlock:
        cidr: 8.8.8.8/32
    ports:
    - protocol: UDP
      port: 53
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-metrics
spec:
  podSelector:
    matchLabels:
      app: apigee-metrics
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          namespace: kube-system
    - ipBlock:
        cidr: 8.8.8.8/32
    ports:
    - protocol: UDP
      port: 53
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-udca
spec:
  podSelector:
    matchLabels:
      app: apigee-udca
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          namespace: kube-system
    - ipBlock:
        cidr: 8.8.8.8/32
    ports:
    - protocol: UDP
      port: 53
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-sync
spec:
  podSelector:
    matchLabels:
      app: apigee-synchronizer
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          namespace: kube-system
    - ipBlock:
        cidr: 8.8.8.8/32
    ports:
    - protocol: UDP
      port: 53
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-connect
spec:
  podSelector:
    matchLabels:
      app: apigee-connect-agent
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          namespace: kube-system
    - ipBlock:
        cidr: 8.8.8.8/32
    ports:
    - protocol: UDP
      port: 53
  policyTypes:
  - Egress
