bases/common/netpol-ingress.yaml
# this policy will allow any egress traffic, ingress only from istio ingress
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mart-ingress
spec:
  podSelector:
    matchLabels:
      app: apigee-mart
  policyTypes:
    - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app: istio-system
    - podSelector:
        matchLabels:
          app: apigee-mart-istio-ingressgateway
    ports:
    - protocol: TCP
      port: 8843
---
# this policy will allow any egress traffic, ingress only from istio ingress
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: runtime-ingress
spec:
  podSelector:
    matchLabels:
      app: apigee-runtime
  policyTypes:
    - Ingress
    - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app: istio-system
    - podSelector:
        matchLabels:
          app: istio-ingressgateway
    ports:
    - protocol: TCP
      port: 8443
  egress:
  - {}
