bases/common/netpol-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: monitoring-cassandra
  namespace: apigee
spec:
  podSelector:
    matchLabels:
      app: apigee-metrics
  policyTypes:
    - Egress
    - Ingress
  ingress:
  - {}
  egress:
    - to: 
      - namespaceSelector:
          matchLabels:
            app: apigee
      - podSelector:
          matchLabels:
            app: apigee-cassandra
      ports:
      - protocol: TCP
        port: 7070
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: monitoring-udca
  namespace: apigee
spec:
  podSelector:
    matchLabels:
      app: apigee-metrics
  policyTypes:
    - Egress
    - Ingress
  ingress:
  - {}
  egress:
    - to: 
      - namespaceSelector:
          matchLabels:
            app: apigee
      - podSelector:
          matchLabels:
            app: apigee-udca
      ports:
      - protocol: TCP
        port: 7070
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: monitoring-connect
  namespace: apigee
spec:
  podSelector:
    matchLabels:
      app: apigee-metrics
  policyTypes:
    - Egress
    - Ingress
  ingress:
  - {}
  egress:
    - to: 
      - namespaceSelector:
          matchLabels:
            app: apigee
      - podSelector:
          matchLabels:
            app: apigee-connect-agent
      ports:
      - protocol: TCP
        port: 7070
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: monitoring-runtime
  namespace: apigee
spec:
  podSelector:
    matchLabels:
      app: apigee-metrics
  policyTypes:
    - Egress
    - Ingress
  ingress:
  - {}    
  egress:
    - to: 
      - namespaceSelector:
          matchLabels:
            app: apigee
      - podSelector:
          matchLabels:
            app: apigee-runtime
      ports:
      - protocol: TCP
        port: 8843
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: monitoring-mart
  namespace: apigee
spec:
  podSelector:
    matchLabels:
      app: apigee-metrics
  policyTypes:
    - Egress
    - Ingress
  ingress:
  - {}    
  egress:
    - to: 
      - namespaceSelector:
          matchLabels:
            app: apigee
      - podSelector:
          matchLabels:
            app: apigee-mart
      ports:
      - protocol: TCP
        port: 8843
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: monitoring-sync
  namespace: apigee
spec:
  podSelector:
    matchLabels:
      app: apigee-metrics
  policyTypes:
    - Egress
    - Ingress
  ingress:
  - {}    
  egress:
    - to: 
      - namespaceSelector:
          matchLabels:
            app: apigee
      - podSelector:
          matchLabels:
            app: apigee-synchronizer
      ports:
      - protocol: TCP
        port: 8843
